--- a/Supervised_learning.ipynb
+++ b/Supervised_learning.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Supervised learning.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "1Nqk_1XkEyWdweLLWa4wufk3blOcqSjvZ",
-      "authorship_tag": "ABX9TyPia8bFEvKrZj5AuFTIZ0tD",
+      "authorship_tag": "ABX9TyOvYi/TahB3JVS0J74mPyYU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,12 +260,80 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Jaik-gzUFjnf"
+      },
+      "source": [
+        "x = torch.from_numpy(np.array([[1,2],[3,4]]))"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2A0yWDBkFsMs",
+        "outputId": "25e91c3f-3000-4ca3-91c0-50f58caaf112"
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2],\n",
+              "        [3, 4]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XZ5Y9_FQFtHM",
+        "outputId": "66253fb5-2967-4042-d7f4-e82376cdb84d"
+      },
+      "source": [
+        "x[:,1]"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2, 4])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ZqIMFtasaCHi"
       },
       "source": [
         "class scRNACSV(Dataset):\n",
         "  def __init__(self, expr, meta, transform = None, target_transform=None):\n",
-        "    self.expr = expr\n",
+        "    self.expr = torch.from_numpy(expr.values)\n",
         "    self.meta = meta\n",
         "    self.cells = list(expr.columns)\n",
         "    self.labels = list(meta[\"perturb\"])\n",
@@ -281,7 +350,7 @@
         "    return self.expr.shape[1]\n",
         "\n",
         "  def __getitem__(self,idx):\n",
-        "    one_cell = torch.from_numpy(np.array(self.expr.iloc[:,idx]))\n",
+        "    one_cell = self.expr[:,idx]\n",
         "    if self.transform:\n",
         "      ret = self.transform(one_cell)\n",
         "      #print(\"Use transform\")\n",
@@ -292,7 +361,7 @@
         "\n",
         "    return ret, self.label_dic[self.labels[idx]]"
       ],
-      "execution_count": 5,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -5040,16 +5109,18 @@
         "    global_corr_1 = torch.from_numpy(global_index_1)\n",
         "    \n",
         "    global_data_1 = data[global_index_1,]\n",
-        "    y = global_data_1.numpy().tolist()\n",
-        "    global_data_1 = torch.tensor([2*(i-min(y))/(max(y)-min(y))-1 for i in y])\n",
-        "    \n",
+        "    #y = global_data_1.numpy().tolist()\n",
+        "    #global_data_1 = torch.tensor([2*(i-min(y))/(max(y)-min(y))-1 for i in y])\n",
+        "    global_data_1 = global_data_1/global_data_1.sum(0).expand_as(global_data_1) \n",
+        "    global_data_1[torch.isnan(global_data_1)]=0   #if an entire column is zero, division by 0 will cause NaNs\n",
+        "    global_data_1 = 2*global_data_1 - 1\n",
         "    global_input_1 = torch.cat([global_data_1, global_corr_1]).float()\n",
         "    #y = global_input_1.numpy().tolist()\n",
         "    #global_input_1 = torch.tensor([2*(i-min(y))/(max(y)-min(y))-1 for i in y])\n",
         "    \n",
         "    return global_input_1"
       ],
-      "execution_count": 6,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -5082,7 +5153,7 @@
       "source": [
         "crop = DINO_Crop(0.5,0.25,8)"
       ],
-      "execution_count": 7,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -5802,12 +5873,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TiQnzBQ9Pyqi",
-        "outputId": "8b77da33-b9a0-43e7-89d8-1916e84a15ba"
+        "outputId": "dec667f2-ec90-4771-a21f-5feb493d73cb"
       },
       "source": [
         "train_dataset = scRNACSV(expr_train, meta_train, transform = crop)"
       ],
-      "execution_count": 22,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -5821,26 +5892,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L9WI_boUt4Ow",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2b7c2f18-5412-4573-a930-2852d5c5518c"
+        "id": "L9WI_boUt4Ow"
       },
       "source": [
         "x, y = train_dataset[503]"
       ],
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "This is the length\n",
-            "2000\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 69,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5849,12 +5907,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5LlsL7Y6t7mW",
-        "outputId": "8aa7b6b7-40c4-417e-b38e-0b162294d65f"
+        "outputId": "6a0ff658-a3a1-451b-a4bf-9fbd97f3ce02"
       },
       "source": [
         "x.shape"
       ],
-      "execution_count": 62,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5866,7 +5924,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 70
         }
       ]
     },
@@ -5877,24 +5935,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hYUlCSpvyZ-A",
-        "outputId": "7e3ab0d3-d130-4b47-fe1e-1ff82e20df44"
+        "outputId": "1762bc87-c435-4681-c9f1-739ecf5c6746"
       },
       "source": [
         "x"
       ],
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([-0.9951, -0.9947, -1.0000,  ..., -0.9890, -0.9680,  0.1436])"
+              "tensor([-1.0000e+00, -9.9680e-01, -9.9662e-01,  ...,  6.4900e+02,\n",
+              "         1.3080e+03,  5.5400e+02])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 71
         }
       ]
     },
@@ -5905,12 +5964,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JZ83kPlHt9Dx",
-        "outputId": "291255e0-45b5-4da5-f807-204be3583e26"
+        "outputId": "4b835b30-426c-4b54-9a54-f5c088bcedfa"
       },
       "source": [
         "y"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5922,7 +5981,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 57
         }
       ]
     },
@@ -5936,7 +5995,7 @@
         "    \n",
         "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=16, shuffle = True)"
       ],
-      "execution_count": 23,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -5966,12 +6025,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YQsX2-UdpQdc",
-        "outputId": "9ea682e5-0dc0-4e26-a0a9-21a5507a3052"
+        "outputId": "2b0f2d9e-eb3a-43d9-a114-9c641dd344df"
       },
       "source": [
         "test_dataset = scRNACSV(expr_test, meta_test, transform = crop)"
       ],
-      "execution_count": 24,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -5990,7 +6049,7 @@
       "source": [
         "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=16, shuffle = True)"
       ],
-      "execution_count": 25,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -6037,7 +6096,7 @@
       },
       "source": [
         "class VisionTransformer(nn.Module):\n",
-        "  def __init__(self, img_size=[224],in_chans=1, num_classes=10, embed_dim=256, mlp_ratio=4., depth = 1, qkv_bias=False, qk_scale=None, drop_rate=0., attn_drop_rate=0.,\n",
+        "  def __init__(self, img_size=[224],in_chans=1, num_classes=10, embed_dim=8, mlp_ratio=4., depth = 1, qkv_bias=False, qk_scale=None, drop_rate=0., attn_drop_rate=0.,\n",
         "                 drop_path_rate=0., norm_layer=nn.LayerNorm, **kwargs):\n",
         "    super().__init__()\n",
         "\n",
@@ -6064,13 +6123,13 @@
         "            for i in range(depth)])\n",
         "    # This head???\n",
         "    self.head = nn.Linear(embed_dim, num_classes)\n",
-        "    self.Embedding = nn.Embedding(2000, 128)\n",
+        "    self.Embedding = nn.Embedding(2000, 4)\n",
         "    # SoftMax\n",
         "    #self.softMax = F.log_softmax(10)\n",
         "    #trunc_normal_(self.cls_token, std=.02)\n",
         "    self.apply(self._init_weights) #???\n",
         "    self.act = nn.LeakyReLU()\n",
-        "    self.exprProj = nn.Linear(1,128)\n",
+        "    self.exprProj = nn.Linear(1,4)\n",
         "    \n",
         "    \n",
         "\n",
@@ -6159,7 +6218,7 @@
         "                output.append(self.norm(x))\n",
         "        return output"
       ],
-      "execution_count": 26,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -6170,11 +6229,11 @@
       "source": [
         "def vit_tiny(patch_size=16):\n",
         "    model = VisionTransformer(\n",
-        "        patch_size=patch_size, embed_dim=256, depth=3, num_heads=1, mlp_ratio=4,\n",
+        "        patch_size=patch_size, embed_dim=8, depth=3, num_heads=1, mlp_ratio=4,\n",
         "        qkv_bias=True, norm_layer=partial(nn.LayerNorm, eps=1e-6))\n",
         "    return model"
       ],
-      "execution_count": 27,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -6394,7 +6453,7 @@
       "source": [
         "os.chdir(\"/content/drive/MyDrive/scRNA/Supervised_results\")"
       ],
-      "execution_count": 37,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -6415,10 +6474,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WkqnsAYDRVkQ",
-        "outputId": "c24395d7-20ac-4868-a9e3-df47c5d48312"
+        "outputId": "84e6da35-1c14-41f9-fd34-63b7660fc4b7"
       },
       "source": [
-        "output_dir = './128+128_perturb' ### customized your own output_dir\n",
+        "output_dir = './128+4_perturb_with_retrain' ### customized your own output_dir\n",
         "model = vit_tiny()\n",
         "optimizer = optim.Adam(model.parameters(), lr = 1e-4)\n",
         "model.cuda()\n",
@@ -6433,6 +6492,7 @@
         ")\n",
         "start_epoch = to_restore[\"epoch\"]\n",
         "for epoch in range(start_epoch, 150):\n",
+        "    model.train()\n",
         "    train_one_epoch(train_loader, model, epoch, optimizer)\n",
         "    # ============ writing logs ... ============\n",
         "    save_dict = {\n",
@@ -6441,7 +6501,7 @@
         "        'epoch': epoch + 1,\n",
         "    }\n",
         "    # Train loop\n",
-        "    if epoch % 10 == 0:\n",
+        "    if epoch % 3 == 0:\n",
         "      correct, total = 0, 0\n",
         "    \n",
         "      with torch.no_grad():\n",
@@ -6491,64 +6551,44 @@
         {
           "output_type": "stream",
           "text": [
-            "Train Epoch: 0 [0/4014 (0%)]\tLoss 2.345907\n",
-            "Train Epoch: 0 [1600/4014 (40%)]\tLoss 2.300668\n",
-            "Train Epoch: 0 [3200/4014 (80%)]\tLoss 2.301975\n",
+            "Found checkpoint at ./128+4_perturb_with_retrain/checkpoint.pth\n",
+            "=> loaded model from checkpoint './128+4_perturb_with_retrain/checkpoint.pth' with msg <All keys matched successfully>\n",
+            "=> loaded optimizer from checkpoint './128+4_perturb_with_retrain/checkpoint.pth'\n",
+            "Train Epoch: 4 [0/4014 (0%)]\tLoss 2.338926\n",
+            "Train Epoch: 4 [1600/4014 (40%)]\tLoss 2.294357\n",
+            "Train Epoch: 4 [3200/4014 (80%)]\tLoss 2.283868\n",
+            "Train Epoch: 5 [0/4014 (0%)]\tLoss 2.325745\n",
+            "Train Epoch: 5 [1600/4014 (40%)]\tLoss 2.269588\n",
+            "Train Epoch: 5 [3200/4014 (80%)]\tLoss 2.242748\n",
+            "Train Epoch: 6 [0/4014 (0%)]\tLoss 2.242881\n",
+            "Train Epoch: 6 [1600/4014 (40%)]\tLoss 2.241501\n",
+            "Train Epoch: 6 [3200/4014 (80%)]\tLoss 2.214717\n",
             "14.349776 %\n",
             "14.414414 %\n",
-            "Train Epoch: 1 [0/4014 (0%)]\tLoss 2.265646\n",
-            "Train Epoch: 1 [1600/4014 (40%)]\tLoss 2.304336\n",
-            "Train Epoch: 1 [3200/4014 (80%)]\tLoss 2.298684\n",
-            "Train Epoch: 2 [0/4014 (0%)]\tLoss 2.291671\n",
-            "Train Epoch: 2 [1600/4014 (40%)]\tLoss 2.169697\n",
-            "Train Epoch: 2 [3200/4014 (80%)]\tLoss 2.299381\n",
-            "Train Epoch: 3 [0/4014 (0%)]\tLoss 2.297323\n",
-            "Train Epoch: 3 [1600/4014 (40%)]\tLoss 2.301168\n",
-            "Train Epoch: 3 [3200/4014 (80%)]\tLoss 2.287852\n",
-            "Train Epoch: 4 [0/4014 (0%)]\tLoss 2.307449\n",
-            "Train Epoch: 4 [1600/4014 (40%)]\tLoss 2.295540\n",
-            "Train Epoch: 4 [3200/4014 (80%)]\tLoss 2.283937\n",
-            "Train Epoch: 5 [0/4014 (0%)]\tLoss 2.297473\n",
-            "Train Epoch: 5 [1600/4014 (40%)]\tLoss 2.282553\n",
-            "Train Epoch: 5 [3200/4014 (80%)]\tLoss 2.310278\n",
-            "Train Epoch: 6 [0/4014 (0%)]\tLoss 2.281320\n",
-            "Train Epoch: 6 [1600/4014 (40%)]\tLoss 2.295942\n",
-            "Train Epoch: 6 [3200/4014 (80%)]\tLoss 2.284657\n",
-            "Train Epoch: 7 [0/4014 (0%)]\tLoss 2.272822\n",
-            "Train Epoch: 7 [1600/4014 (40%)]\tLoss 2.280429\n",
-            "Train Epoch: 7 [3200/4014 (80%)]\tLoss 2.275958\n",
-            "Train Epoch: 8 [0/4014 (0%)]\tLoss 2.308931\n",
-            "Train Epoch: 8 [1600/4014 (40%)]\tLoss 2.283745\n",
-            "Train Epoch: 8 [3200/4014 (80%)]\tLoss 2.287586\n",
-            "Train Epoch: 9 [0/4014 (0%)]\tLoss 2.296215\n",
-            "Train Epoch: 9 [1600/4014 (40%)]\tLoss 2.273321\n",
-            "Train Epoch: 9 [3200/4014 (80%)]\tLoss 2.290014\n",
-            "Train Epoch: 10 [0/4014 (0%)]\tLoss 2.297438\n",
-            "Train Epoch: 10 [1600/4014 (40%)]\tLoss 2.275869\n",
-            "Train Epoch: 10 [3200/4014 (80%)]\tLoss 2.275363\n",
-            "12.780269 %\n",
-            "12.812813 %\n",
-            "Train Epoch: 11 [0/4014 (0%)]\tLoss 2.274903\n",
-            "Train Epoch: 11 [1600/4014 (40%)]\tLoss 2.303884\n",
-            "Train Epoch: 11 [3200/4014 (80%)]\tLoss 2.295335\n",
-            "Train Epoch: 12 [0/4014 (0%)]\tLoss 2.276968\n",
-            "Train Epoch: 12 [1600/4014 (40%)]\tLoss 2.243706\n",
-            "Train Epoch: 12 [3200/4014 (80%)]\tLoss 2.277307\n",
-            "Train Epoch: 13 [0/4014 (0%)]\tLoss 2.265477\n",
-            "Train Epoch: 13 [1600/4014 (40%)]\tLoss 2.280319\n",
-            "Train Epoch: 13 [3200/4014 (80%)]\tLoss 2.296693\n",
-            "Train Epoch: 14 [0/4014 (0%)]\tLoss 2.262445\n",
-            "Train Epoch: 14 [1600/4014 (40%)]\tLoss 2.277546\n",
-            "Train Epoch: 14 [3200/4014 (80%)]\tLoss 2.289984\n",
-            "Train Epoch: 15 [0/4014 (0%)]\tLoss 2.300742\n",
-            "Train Epoch: 15 [1600/4014 (40%)]\tLoss 2.232603\n",
-            "Train Epoch: 15 [3200/4014 (80%)]\tLoss 2.273068\n",
-            "Train Epoch: 16 [0/4014 (0%)]\tLoss 2.293959\n",
-            "Train Epoch: 16 [1600/4014 (40%)]\tLoss 2.243730\n",
-            "Train Epoch: 16 [3200/4014 (80%)]\tLoss 2.297048\n",
-            "Train Epoch: 17 [0/4014 (0%)]\tLoss 2.237448\n",
-            "Train Epoch: 17 [1600/4014 (40%)]\tLoss 2.233597\n",
-            "Train Epoch: 17 [3200/4014 (80%)]\tLoss 2.326646\n"
+            "Train Epoch: 7 [0/4014 (0%)]\tLoss 2.282382\n",
+            "Train Epoch: 7 [1600/4014 (40%)]\tLoss 2.250067\n",
+            "Train Epoch: 7 [3200/4014 (80%)]\tLoss 2.240855\n",
+            "Train Epoch: 8 [0/4014 (0%)]\tLoss 2.264777\n",
+            "Train Epoch: 8 [1600/4014 (40%)]\tLoss 2.206464\n",
+            "Train Epoch: 8 [3200/4014 (80%)]\tLoss 2.310301\n",
+            "Train Epoch: 9 [0/4014 (0%)]\tLoss 2.337194\n",
+            "Train Epoch: 9 [1600/4014 (40%)]\tLoss 2.275985\n",
+            "Train Epoch: 9 [3200/4014 (80%)]\tLoss 2.273392\n",
+            "14.349776 %\n",
+            "14.414414 %\n",
+            "Train Epoch: 10 [0/4014 (0%)]\tLoss 2.196785\n",
+            "Train Epoch: 10 [1600/4014 (40%)]\tLoss 2.350185\n",
+            "Train Epoch: 10 [3200/4014 (80%)]\tLoss 2.179221\n",
+            "Train Epoch: 11 [0/4014 (0%)]\tLoss 2.198281\n",
+            "Train Epoch: 11 [1600/4014 (40%)]\tLoss 2.350155\n",
+            "Train Epoch: 11 [3200/4014 (80%)]\tLoss 2.252418\n",
+            "Train Epoch: 12 [0/4014 (0%)]\tLoss 2.158739\n",
+            "Train Epoch: 12 [1600/4014 (40%)]\tLoss 2.225632\n",
+            "Train Epoch: 12 [3200/4014 (80%)]\tLoss 2.327045\n",
+            "14.349776 %\n",
+            "14.414414 %\n",
+            "Train Epoch: 13 [0/4014 (0%)]\tLoss 2.166483\n",
+            "Train Epoch: 13 [1600/4014 (40%)]\tLoss 2.330031\n"
           ],
           "name": "stdout"
         }
